# Shapebench

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.txt  replicate.py
cfg/: autogenerated.json  config.json  config_base.json  config_comparison_to_PRC.json  config_replication.json  config_replication_base.json  config_sirxalot.json
clutter-simulator/: generate_object_pile.py
lib/CGAL-5.6.1/: CMakeLists.txt
lib/PortableGL-0.98.0/: portablegl.h
lib/gmp-6.3.0/: Makefile  config.h  config.status  gen-bases  gen-fac  gen-fib  gen-psqr  gen-sieve  gen-trialdivtab  gmp.h  libgmp.la  libtool
lib/gmp-6.3.0/.libs/: libgmp.lai  libgmp.so.10.5.0
lib/gmp-6.3.0/cxx/: Makefile
lib/gmp-6.3.0/demos/: Makefile
lib/gmp-6.3.0/doc/: Makefile
lib/gmp-6.3.0/mpf/: Makefile
lib/gmp-6.3.0/mpn/: Makefile
lib/gmp-6.3.0/mpq/: Makefile
lib/gmp-6.3.0/mpz/: Makefile
lib/gmp-6.3.0/printf/: Makefile
lib/gmp-6.3.0/rand/: Makefile
lib/gmp-6.3.0/scanf/: Makefile
lib/gmp-6.3.0/tests/: Makefile  libtests.la  t-bswap  t-constants  t-count_zeros  t-hightomask  t-modlinv  t-parity  t-popc  t-sub
lib/gmp-6.3.0/tune/: Makefile
lib/isotropicremesher/: CMakeLists.txt
lib/isotropicremesher/src/: isotropichalfedgemesh.cpp
lib/sha1-1.4/: sha1.hpp
lib/simsense/simsense.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
lib/simsense/test/: test1.py  test2.py
lib/v-hacd/include/: VHACD.h
res/shaders/: fullscreenquad.frag  fullscreenquad.vert  objectIDShader.frag  objectIDShader.vert  phong.frag  phong.vert
scripts/: heatmap.py  prettytable.py  ubuntu_install_dependencies_except_cuda.sh
src/: main.cpp  main.cu
src/benchmark-core/: Batch.h  CompressedDatasetCreator.cpp  CompressedDatasetCreator.h  ComputedConfig.cpp  ComputedConfig.h  Dataset.cpp  Dataset.h  DescriptorGenerator.h  Experiment.h  ExperimentConfiguration.h  MissingBenchmarkConfigurationException.h  PointCloudSampler.h  RepresentativeSet.cpp  RepresentativeSet.h  SupportRadiusEstimation.cpp  SupportRadiusEstimation.h  constants.h  descriptorGenerator.h  experimentRunner.h  randomEngine.h  referenceDescriptorSet.h  referenceSetDistanceKernel.cuh
src/benchmark-core/common-procedures/: areaEstimator.h  descriptorGenerator.h  pointCloudSampler.h
src/benchmark-core/experiments/: ClutterResistanceExperiment.cpp  ClutterResistanceExperiment.h  GaussianNoiseExperiment.cpp  GaussianNoiseExperiment.h  OcclusionResistanceExperiment.cpp  OcclusionResistanceExperiment.h
src/benchmarkCore/: Batch.h  BenchmarkConfiguration.h  CompressedDatasetCreator.cpp  CompressedDatasetCreator.h  ComputedConfig.cpp  ComputedConfig.h  Dataset.cpp  Dataset.h  DatasetDownloader.cpp  DatasetDownloader.h  MissingBenchmarkConfigurationException.h  experimentRunner.h  referenceSetDistanceKernel.cuh
src/benchmarkCore/common-procedures/: areaEstimator.h  descriptorGenerator.h  meshLoader.h  pointCloudSampler.h  referenceIndexer.h
src/clutter-simulator/: generate_object_pile.py  output.blend1  run.sh  sample.json
src/dataset/: CompressedDatasetCreator.h  Dataset.cpp  Dataset.h  DatasetLoader.cpp  DatasetLoader.h  LocalDatasetCache.cpp  LocalDatasetCache.h  RemoteDatasetCache.cpp  RemoteDatasetCache.h  miniballGenerator.cpp  miniballGenerator.h
src/experiment-clutter/: ClutterExperiment.h  GeometryBuffer.cpp  GeometryBuffer.h  OpenGLDebugRenderer.cpp  OpenGLDebugRenderer.h  PhysicsSimulator.cpp  PhysicsSimulator.h  Shader.cpp  ShaderLoader.cpp  ShaderLoader.h
src/experiment-occlusion/: OcclusionGenerator.cpp  OcclusionGenerator.h
src/experiments/additive-noise/: ClutterExperiment.h  OpenGLDebugRenderer.cpp  OpenGLDebugRenderer.h  PhysicsSimulator.cpp
src/experiments/capture-noise/: CaptureNoiseExperiment.h  Remesher.cpp
src/experiments/shared/: RankingsCalculator.cpp  RankingsCalculator.h
src/experiments/subtractive-noise/: OcclusionExperiment.h  OcclusionGenerator.cpp  OcclusionGenerator.h
src/filters/: AlteredMesh.h  Filter.h  FilteredMeshPair.cpp  FilteredMeshPair.h  FiltereredMeshPair.h  TriangleMapping.h
src/filters/additive-noise/: OpenGLDebugRenderer.cpp  OpenGLDebugRenderer.h  PhysicsSimulator.cpp  PhysicsSimulator.h
src/filters/additiveNoise/: AdditiveNoiseCache.cpp  AdditiveNoiseCache.h  AdditiveNoiseFilterSettings.h  OpenGLDebugRenderer.cpp  OpenGLDebugRenderer.h  PhysicsSimulator.cpp  PhysicsSimulator.h  additiveNoiseFilter.cpp  additiveNoiseFilter.h
src/filters/captureNoise/: normalNoiseFilter.cpp  normalNoiseFilter.h  remeshingFilter.cpp  remeshingFilter.h
src/filters/gaussianNoise/: gaussianNoiseFilter.cpp  gaussianNoiseFilter.h
src/filters/meshResolutionDeviation/: simplificationFilter.cpp  simplificationFilter.h
src/filters/noisyCapture/: KinectSimulator.cpp  KinectSimulator.h  NoisyCaptureFilter.cpp  NoisyCaptureFilter.h
src/filters/normalVectorDeviation/: normalNoiseFilter.cpp  normalNoiseFilter.h
src/filters/subtractive-noise/: OcclusionGenerator.cpp
src/filters/subtractiveNoise/: OcclusionFilter.cpp  OcclusionFilter.h  OcclusionGenerator.cpp  OcclusionGenerator.h  frustrumOcclusionFilter.cpp
src/filters/supportRadiusDeviation/: supportRadiusNoise.cpp  supportRadiusNoise.h
src/filters/triangleShift/: AlternateTriangulationFilter.cpp  AlternateTriangulationFilter.h  (+2 more)
src/methods/: 3DSCMethod.h  Method.cpp  Method.h  QUICCIDescriptor.cpp  QUICCIDescriptor.h  QUICCIMethod.cpp  QUICCIMethod.h  RICIMethod.h  RoPSMethod.h  SHOTMethod.h  SIMethod.h  USCMethod.h
src/replication/: ExperimentResultsValidator.h  RandomSubset.cpp  RandomSubset.h
src/results/: ExperimentResult.h  ResultDumper.cpp  ResultDumper.h
src/support-radius-estimation/: SupportRadiusEstimation.h
src/supportRadiusEstimation/: SupportRadiusEstimation.h
src/utils/: FileCache.cpp  FileCache.h  Orientation.h  PortableGLImplementation.cpp  meshLoader.h  prettyprint.h  progressBar.h
tools/charter/: charter.py  makecharts-HD-PRC.sh  makecharts-HD.sh  makecharts-PRC.sh  makecharts-samplecount-charts.sh  makecharts.sh  testing.sh
tools/configGenerator/: main.py
tools/similarityrenderer/: main.cpp
(+203 files in other folders)
